--- a/app/assignment.html
+++ b/app/assignment.html
@@ -17,7 +17,7 @@ current: index
             <!-- 
                   
                 </span> -->
-            <a href="#" class=" material-icons text-success position-absolute top-50 end-0 translate-middle-y ">
+            <a href="#" class=" material-icons text-primary position-absolute top-50 end-0 translate-middle-y ">
                 expand_more</a>
             <select class="form-select background-image-none border-0 pe-32 fs-6" aria-label="course">
                 <option value="All" selected>All Courses</option>
@@ -48,7 +48,7 @@ current: index
     <div class="col-12 mb-1 d-flex justify-content-between align-items-center mt-0">
         <div class="fs-6 position-relative">
 
-            <a href="#" class="material-icons  text-success  position-absolute top-50 end-0 translate-middle-y">
+            <a href="#" class="material-icons  text-primary  position-absolute top-50 end-0 translate-middle-y">
                 expand_more
             </a>
             <select class="form-select background-image-none border-0  ps-0 pe-3  fs-6  fw-bold " aria-label="comment"
@@ -139,7 +139,7 @@ current: index
                                     here comes a
                                     question: Why in the
                                     following code the height of the div is bigger than the height of the <code
-                                        class="text-success">img</code> ? There is a gap below
+                                        class="text-primary">img</code> ? There is a gap below
                                     the image, but it doesn’t seems to be a padding/margin. <br> What is the gap or
                                     extra
                                     space
@@ -175,10 +175,10 @@ current: index
                                 </p>
                                 <p class="mb-4">You can: </p>
                                 <ul class="mb-0">
-                                    <li> adjust the <code class="text-success">vertical-align</code> of the image to
-                                        position it elsewhere (e.g. the <code class="text-success">middle </code>)
+                                    <li> adjust the <code class="text-primary">vertical-align</code> of the image to
+                                        position it elsewhere (e.g. the <code class="text-primary">middle </code>)
                                         or </li>
-                                    <li>change the <code class="text-success">display </code> so it isn’t inline.
+                                    <li>change the <code class="text-primary">display </code> so it isn’t inline.
                                     </li>
                                 </ul>
                             </div>
@@ -196,10 +196,10 @@ current: index
                             </a></li>
                     </ul>
                     <ul class="list-unstyled d-flex mb-0">
-                        <li><a href="javascript:void(0);" class="btn px-32 py-2 btn-outline-success border-2">Mark as
+                        <li><a href="javascript:void(0);" class="btn px-32 py-2 btn-outline-primary border-2">Mark as
                                 read</a>
                         </li>
-                        <li class="ms-3"><a href="#" class="btn px-3 py-2 btn-success border-2 "
+                        <li class="ms-3"><a href="#" class="btn px-3 py-2 btn-primary border-2 "
                                 id="reply-btn">Reply</a></li>
                     </ul>
 
@@ -254,10 +254,10 @@ current: index
                 <textarea name="answer" id="answer" cols="30" rows="7"
                     class="w-100 px-4 pt-2 text-gray-400 textarea"></textarea>
                 <ul class="list-unstyled  d-flex justify-content-end align-items-center mb-0 pe-4">
-                    <li><a href="javascript:void(0);" class="btn px-32 py-2 btn-outline-success border-2"
+                    <li><a href="javascript:void(0);" class="btn px-32 py-2 btn-outline-primary border-2"
                             id="cancel-btn">Mark as read</a>
                     </li>
-                    <li class="ms-3"><a href="javascript:void(0);" class="btn px-3 py-2 btn-success border-2 "
+                    <li class="ms-3"><a href="javascript:void(0);" class="btn px-3 py-2 btn-primary border-2 "
                             id="submit">Reply</a></li>
                 </ul>
 
